[package]
name = "mdbook-open-on-gh"
version = "2.3.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add a open-on-github link on every page"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-open-on-gh"
repository = "https://github.com/badboy/mdbook-open-on-gh"
edition = "2018"

[dependencies]
mdbook = "0.4"
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["cargo"] }
serde_json = "1"
toml = "0.7"
