[package]
name = "mdbook-open-on-gh"
version = "2.4.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add a open-on-github link on every page"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-open-on-gh"
repository = "https://github.com/badboy/mdbook-open-on-gh"
edition = "2018"

[dependencies]
mdbook = "0.4.33"
env_logger = "0.10.0"
log = "0.4"
clap = { version = "4.1.0", features = ["cargo"] }
serde_json = "1.0"
toml = "0.5.11"
